--- a/app.wxss
+++ b/app.wxss
@@ -8,3 +8,13 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+.card {
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    background-color: #d4e2c2;
+    box-shadow: 4px 1px 1px #cccccc;
+    margin: 12px;
+    padding: 12px;
+    position: relative;
+}
