--- a/pages/keymap/keymap.wxml
+++ b/pages/keymap/keymap.wxml
@@ -5,7 +5,7 @@
     <view wx:for="{{keymapList}}" wx:key="{{item}}" class="card">
       <label class="keymap-label-style">{{item.option}}</label>
       <view>
-       作用：{{item.explain}}
+       {{item.keymap}}
       </view>
     </view>
 
