--- a/app.wxss
+++ b/app.wxss
@@ -18,3 +18,19 @@
     padding: 12px;
     position: relative;
 }
+
+.card-disable {
+    border: 2px solid #ffffff;
+    border-radius: 5px;
+    background-color: #c4c2c2;
+    box-shadow: 4px 1px 1px #cccccc;
+    margin: 12px;
+    padding: 12px;
+    position: relative;
+}
+
+.common-label-style {
+  font-size: 20px;
+  font-weight: bold;
+  padding:8px;
+}
