--- a/pages/cmd/cmd.wxss
+++ b/pages/cmd/cmd.wxss
@@ -1,1 +1,15 @@
 /* pages/cmd/cmd.wxss */
+
+.code-style {
+  margin: 4px;
+  padding: 2px;
+  border-radius: 4px;
+  font-size: 12px;
+  background: whitesmoke
+}
+
+.code-label-style {
+  margin: 4px;
+  font-size: 14px;
+  font-weight: bold;
+}
