--- a/components/apeCard/apeCard.wxml
+++ b/components/apeCard/apeCard.wxml
@@ -1,24 +1,10 @@
 <!--pages/common/apeCard.wxml-->
-<view wx:for="{{cmdList}}" wx:key="{{item}}" class="card">
-  <label class="common-label-style">{{item.option}}</label>
-  <view wx:if="{{item.isCmdList}}">
-    <view wx:for="{{item.cmd}}" wx:key="{{item}}" class="card">
-      <label wx:if="{{item.option}}" class="code-label-style">{{item.option}}</label>
-
-      <view wx:if="{{item.isCmdList}}">
-        <view wx:for="{{item.cmd}}" wx:key="{{item}}" class="card">
-          <label wx:if="{{item.option}}" class="code-label-style">{{item.option}}</label>
-          <br/>
-          <label class="code-style">{{item.cmd}}</label>
-        </view>
-      </view>
-      <view wx:else>
-        <label class="code-style">{{item.cmd}}</label>
-      </view>
-
-    </view>
+<view class="card">
+  <label class="code-label-style">{{cmdItem.option}}</label>
+  <view wx:if="{{cmdItem.isCmdList}}">
+    <ape-card wx:for="{{cmdItem.cmd}}" wx:key="{{item}}" wx:for-index="index" wx:for-item="item" cmd-item="{{item}}"/>
   </view>
   <view wx:else>
-    <label class="code-style">{{item.cmd}}</label>
+    <label class="code-style">{{cmdItem.cmd}}</label>
   </view>
 </view>
