add algorithm about switch pair

--- a/pages/pair/pair.wxml
+++ b/pages/pair/pair.wxml
@@ -4,14 +4,10 @@
 <view class="weui-flex">
             <view class="weui-flex__item"><view class="title">今天的pair分组</view></view>
         </view>
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+        
+        <view class="weui-flex" wx:for="{{pairs}}" wx:key="{{item}}" wx:for-index="index" wx:for-item="item">
+            <view class="weui-flex__item"><view class="placeholder">{{item[0]}}</view></view>
             <view><view class="title"><image src='../../images/shake_hands.png' class="handshake_img"></image></view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-        </view>
-        <view class="weui-flex">
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
-            <view><view class="title"><image src='../../images/shake_hands.png' class="handshake_img"></image></view></view>
-            <view class="weui-flex__item"><view class="placeholder">weui</view></view>
+            <view class="weui-flex__item"><view class="placeholder">{{item[1]}}</view></view>
         </view>
 </view>
