--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -3,24 +3,32 @@
   <scroll-view>
 
     <view class="kind-list">
-        <block wx:for="{{eMenu}}" wx:key="id">
-            <view class="kind-list__item">
-                <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindToggle">
-                    <view class="weui-flex__item">{{item.name}}</view>
-                    <image class="kind-list__img" src="../../images/all.png"></image>
+      <block wx:for="{{eMenu}}" wx:key="id">
+        <view class="kind-list__item">
+          <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindToggle">
+            <view class="weui-flex__item">{{item.name}}</view>
+            <image class="kind-list__img" src="../../images/all.png"></image>
+          </view>
+          <view class="kind-list__item-bd {{item.open ? 'kind-list__item-bd_show' : ''}}">
+            <view class="weui-cells {{item.open ? 'weui-cells_show' : ''}}">
+              <block wx:for="{{item.pages}}" wx:for-item="page" wx:key="page.label">
+                <view wx:if="{{page.enable}}">
+                  <navigator url="{{page.url}}" class="weui-cell weui-cell_access">
+                    <view class="weui-cell__bd">{{page.label}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                  </navigator>
                 </view>
-                <view class="kind-list__item-bd {{item.open ? 'kind-list__item-bd_show' : ''}}">
-                    <view class="weui-cells {{item.open ? 'weui-cells_show' : ''}}">
-                        <block wx:for="{{item.pages}}" wx:for-item="page" wx:key="page.label">
-                            <navigator url="{{page.url}}" class="weui-cell weui-cell_access">
-                                <view class="weui-cell__bd">{{page.label}}</view>
-                                <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-                            </navigator>
-                        </block>
-                    </view>
+                <view wx:else>
+                  <view class="weui-cell weui-cell_access">
+                    <view class="weui-cell__bd">{{page.label}}</view>
+                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                  </view>
                 </view>
+              </block>
             </view>
-        </block>
+          </view>
+        </view>
+      </block>
     </view>
 
     <!-- <view wx:for="{{eMenu}}" wx:key="{{item}}">
